# python-anyconfig-configobj-backend

./: .gitmodules  .travis.yml  MANIFEST.in  NEWS  README.rst  python-anyconfig-configobj-backend.spec.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
anyconfig/backend/: configobj_.py
anyconfig_configobj_backend/: __init__.py  configobj.py  configobj_.py  globals.py
anyconfig_configobj_backend/tests/: configobj_.py
aux/: entry_points.txt
docs/: Makefile  about.rst  anyconfig_configobj_backend.configobj.rst  api.configobj.rst  api.rst  badges.rst  build_install.rst  conf.py  header.rst  index.rst
pkg/: copr-build.sh  entry_points.txt  gen-readme.sh  nose.cfg  package.spec.in  runtest.sh  test_requirements.txt
src/anyconfig_configobj_backend/: __init__.py  configobj_.py
src/anyconfig_configobj_backend/configobj/: base.py  dumper.py  loader.py  parser.py
tests/: common.py  configobj_.py  plugin.py  releng.bats
tests/common/: dumper.py  loader.py  paths.py  tdi_base.py  test_tdi_base.py
tests/dumper/: test_configobj_configobj.py
tests/loader/: test_configobj_configobj.py
tests/res/: 0.configobj
tests/res/1/dumpers/configobj.configobj/10/: 200_data_wo_sections.json  220_data_w_sections.json  240_data_w_sections.json
tests/res/1/loaders/configobj.configobj/10/: 120_a_comment.configobj  200_data_wo_sections.configobj  220_data_w_sections.configobj  240_data_w_sections.configobj  300_inerpolation.configobj
tests/res/1/loaders/configobj.configobj/10/e/: 120_a_comment.configobj.json  200_data_wo_sections.configobj.json  220_data_w_sections.configobj.json  240_data_w_sections.configobj.json  300_inerpolation.configobj.json
tests/res/1/loaders/configobj.configobj/20/: 300_inerpolation.configobj
tests/res/1/loaders/configobj.configobj/20/e/: 300_inerpolation.configobj.json
tests/res/1/loaders/configobj.configobj/20/o/: 300_inerpolation.configobj.json
