# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[metadata]
name = anyconfig-configobj-backend
# version = attr: anyconfig_configobj_backend.__version__
description = Backend module for python-anyconfig to load and dump configobj data
project_urls =
    CI: Github Actions = https://github.com/ssato/python-anyconfig-configobj-backend/actions 
    Download = https://pypi.python.org/pypi/anyconfig-configobj-backend
    Download RPMs = https://copr.fedoraproject.org/coprs/ssato/python-anyconfig/
    Bug Tracker = https://github.com/ssato/python-anyconfig-configobj-backend/issues
    Source = https://github.com/ssato/python-anyconfig-configobj-backend

long_description =
    This is a backend parser module for python-anyconfig to support to load and
    dump configobj files using configobj.

    - Author: Satoru SATOH <ssato@redhat.com>
    - License: MIT

    SEE ALSO:

    - python-anyconfig: https://github.com/ssato/python-anyconfig
    - configobj: https://configobj.readthedocs.io

author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/python-anyconfig-configobj-backend
platforms =
    any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    anyconfig
    configobj

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
anyconfig_backends =
    configobj.configobj = anyconfig_configobj_backend:Parser

[tool:pytest]
testpaths =
    tests

python_files =
    test_*.py

addopts = --cov=src -vv -rxXs --cov --cov-report xml
